[gd_scene load_steps=48 format=2]

[ext_resource path="res://Game/GameLevelTemplate/ProgressBar.gd" type="Script" id=1]
[ext_resource path="res://Game/GameLevelTemplate/GameLevelTemplate.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fishing Scene/UI elements/hook_button_2.0.png" type="Texture" id=3]
[ext_resource path="res://FishingScene/Bobber/Bobber.tscn" type="PackedScene" id=4]
[ext_resource path="res://FishingScene/Ponds/Pond.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/GameLevelTemplate/Countdown.gd" type="Script" id=6]
[ext_resource path="res://Game/GameLevelTemplate/Fishes.gd" type="Script" id=7]
[ext_resource path="res://Assets/Fonts/arco/ARCO for OSX.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/radial_background.png" type="Texture" id=9]
[ext_resource path="res://Assets/radial_bar.png" type="Texture" id=10]
[ext_resource path="res://Shaders/CircleScreenTransition/CircleScreenTransition.tscn" type="PackedScene" id=11]
[ext_resource path="res://Game/GameLevelTemplate/GameOver.gd" type="Script" id=12]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Bold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Upgrades/OrbSpawners/AcidOrbSpawner/AcidOrbSpawner.tscn" type="PackedScene" id=14]
[ext_resource path="res://Upgrades/OrbSpawners/AtAllCostOrbSpawner/AtAllCostOrbSpawner.tscn" type="PackedScene" id=15]
[ext_resource path="res://Upgrades/OrbSpawners/ThunderOrbSpawner/ThunderOrbSpawner.tscn" type="PackedScene" id=16]
[ext_resource path="res://Upgrades/OrbSpawners/CookTheGrenadeOrbSpawner/CookTheGrenadeOrbSpawner.tscn" type="PackedScene" id=17]
[ext_resource path="res://Game/GameLevelTemplate/PausingManager.gd" type="Script" id=18]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Medium.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Game/GameLevelTemplate/DebugUI.gd" type="Script" id=20]
[ext_resource path="res://Game/GameLevelTemplate/ItemsThatRequireLevel.gd" type="Script" id=21]
[ext_resource path="res://Upgrades/Cccombo/Cccombo.tscn" type="PackedScene" id=22]
[ext_resource path="res://Upgrades/OrbSpawners/ArrowOrbSpawner/ArrowOrbSpawner.tscn" type="PackedScene" id=23]
[ext_resource path="res://Game/GameLevelTemplate/OrbManager.gd" type="Script" id=24]
[ext_resource path="res://Resources/Custom Resources/CurrentBobberStats.tres" type="Resource" id=25]
[ext_resource path="res://Upgrades/OrbSpawners/AntimatterWaveOrbSpawner/AntimatterWaveOrbSpawner.tscn" type="PackedScene" id=26]
[ext_resource path="res://Upgrades/OrbSpawners/FiveRoundsRapidOrbSpawner/FiveRoundsRapidOrbSpawner.tscn" type="PackedScene" id=27]
[ext_resource path="res://Upgrades/OrbSpawners/FieldMedicOrbSpawner/FieldMedicOrbSpawner.tscn" type="PackedScene" id=28]
[ext_resource path="res://Upgrades/OrbSpawners/StunGrenadeOrbSpawner/StunGrenadeOrbSpawner.tscn" type="PackedScene" id=29]
[ext_resource path="res://Upgrades/OrbSpawners/LongRestOrbSpawner/LongRestOrbSpawner.tscn" type="PackedScene" id=30]
[ext_resource path="res://Upgrades/OrbSpawners/InvulnerabilityOrbSpawner/InvulnerabilityOrbSpawner.tscn" type="PackedScene" id=31]
[ext_resource path="res://Upgrades/OrbSpawners/StickyGooOrbSpawner/StickyGooOrbSpawner.tscn" type="PackedScene" id=32]
[ext_resource path="res://Upgrades/OrbSpawners/MjolnirOrbSpawner/MjolnirOrbSpawner.tscn" type="PackedScene" id=33]
[ext_resource path="res://Upgrades/OrbSpawners/TNTOrbSpawner/TNTOrbSpawner.tscn" type="PackedScene" id=34]
[ext_resource path="res://Game/GameLevelTemplate/FpsLabel.gd" type="Script" id=35]
[ext_resource path="res://Game/GameLevelTemplate/PauseManager.gd" type="Script" id=36]

[sub_resource type="DynamicFont" id=1]
size = 38
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 144
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 144
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 96
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 56
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 144
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 19 )

[node name="GameLevelTemplate" type="Node2D"]
script = ExtResource( 2 )
current_bobber = ExtResource( 4 )
wave_system_enabled = false

[node name="Pond" parent="." instance=ExtResource( 5 )]
position = Vector2( -1.33484, 0 )

[node name="Fishes" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Orbs" type="Node2D" parent="."]

[node name="BobberSpawnPt" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hooks" type="Control" parent="CanvasLayer/UI"]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/Hooks"]
margin_left = 31.0
margin_top = 20.0
margin_right = 3507.0
margin_bottom = 2044.0
rect_scale = Vector2( 0.042, 0.042 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HooksLabel" type="Label" parent="CanvasLayer/UI/Hooks"]
margin_left = 99.0
margin_top = 48.0
margin_right = 165.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "5/5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fps" type="Control" parent="CanvasLayer/UI"]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsLabel" type="Label" parent="CanvasLayer/UI/Fps"]
margin_left = 32.0
margin_top = 112.0
margin_right = 184.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 2 )
text = "FPS: "
script = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Control" parent="CanvasLayer/UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/UI/Countdown"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -505.0
margin_top = -208.0
margin_right = 505.0
margin_bottom = -23.0
custom_fonts/font = SubResource( 3 )
text = "countdown"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer/UI/Countdown"]
process_mode = 0
one_shot = true
autostart = true

[node name="Congrats" type="Control" parent="CanvasLayer/UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/UI/Congrats"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -418.0
margin_top = -248.0
margin_right = 418.0
margin_bottom = -63.0
custom_fonts/font = SubResource( 4 )
text = "Congrats"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/UI/Congrats"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -475.5
margin_top = 88.0
margin_right = 475.5
margin_bottom = 273.0
custom_fonts/font = SubResource( 5 )
text = "Tap to continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveNumber" type="Control" parent="CanvasLayer/UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentWave" type="Label" parent="CanvasLayer/UI/WaveNumber"]
margin_left = 886.0
margin_top = 41.0
margin_right = 1104.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 6 )
text = "Wave 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalWaves" type="Label" parent="CanvasLayer/UI/WaveNumber"]
margin_left = 1110.0
margin_top = 41.0
margin_right = 1328.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 6 )
text = "/9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="TextureProgress" parent="CanvasLayer/UI/WaveNumber"]
margin_left = 1203.0
margin_top = 41.0
margin_right = 1389.0
margin_bottom = 227.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 30.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
fill_mode = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer/UI/WaveNumber/ProgressBar"]
process_mode = 0

[node name="Stats" type="Control" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="CanvasLayer/UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/UI/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = 55.0
margin_right = 208.0
margin_bottom = 119.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Label" parent="CanvasLayer/UI/GameOver/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -32.0
margin_right = 208.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 208, 34 )
custom_fonts/font = SubResource( 7 )
text = "Play again"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/UI/GameOver/Button/PlayAgain"]

[node name="Label" type="Label" parent="CanvasLayer/UI/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.5
margin_top = -194.0
margin_right = 450.5
margin_bottom = -41.0
custom_fonts/font = SubResource( 8 )
text = "Game over"
align = 1
valign = 1

[node name="HighScore" type="Label" parent="CanvasLayer/UI/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -439.0
margin_top = -26.0
margin_right = 439.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 9 )
text = "Highest round reached:"
align = 1
valign = 1

[node name="DebugUI" type="Control" parent="CanvasLayer/UI"]
visible = false
margin_left = 22.0
margin_top = 103.0
margin_right = 246.0
margin_bottom = 695.0
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="CanvasLayer/UI/DebugUI"]
margin_right = 194.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 10 )
text = "Debug Panel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="CanvasLayer/UI/DebugUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReelDamage" type="Label" parent="CanvasLayer/UI/DebugUI/Content"]
margin_right = 224.0
margin_bottom = 21.0
rect_min_size = Vector2( 224, 21 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
text = "Reel Damage: "

[node name="ReelRate" type="Label" parent="CanvasLayer/UI/DebugUI/Content"]
margin_top = 25.0
margin_right = 224.0
margin_bottom = 46.0
rect_min_size = Vector2( 224, 21 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
text = "Reel Rate: "

[node name="ScreenTransition" parent="CanvasLayer/UI" instance=ExtResource( 11 )]

[node name="PausingManager" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 18 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true

[node name="ItemsThatRequireLevel" type="Node" parent="."]
script = ExtResource( 21 )
Cccombo = ExtResource( 22 )
Arrow = ExtResource( 23 )
AntimatterWave = ExtResource( 26 )
FiveRoundsRapid = ExtResource( 27 )
FieldMedic = ExtResource( 28 )
StunGrenade = ExtResource( 29 )
LongRest = ExtResource( 30 )
Invulnerability = ExtResource( 31 )
StickyGoo = ExtResource( 32 )
Mjolnir = ExtResource( 33 )
Acid = ExtResource( 14 )
AtAllCost = ExtResource( 15 )
Thunder = ExtResource( 16 )
CookTheGrenade = ExtResource( 17 )
TNT = ExtResource( 34 )

[node name="OrbManager" type="Node" parent="."]
script = ExtResource( 24 )
bobber_stats = ExtResource( 25 )

[node name="PauseManager" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 36 )

[connection signal="timeout" from="CanvasLayer/UI/Countdown/Timer" to="CanvasLayer/UI/Countdown" method="_on_Timer_timeout"]
[connection signal="timeout" from="CanvasLayer/UI/WaveNumber/ProgressBar/Timer" to="CanvasLayer/UI/WaveNumber/ProgressBar" method="_on_Timer_timeout"]
[connection signal="button_down" from="CanvasLayer/UI/GameOver/Button" to="CanvasLayer/UI/GameOver" method="_on_Button_button_down"]
[connection signal="button_up" from="CanvasLayer/UI/GameOver/Button" to="CanvasLayer/UI/GameOver" method="_on_Button_button_up"]
[connection signal="tween_all_completed" from="CanvasLayer/UI/GameOver/Button/PlayAgain/Tween" to="CanvasLayer/UI/GameOver" method="_on_Tween_tween_all_completed"]

[editable path="CanvasLayer/UI/ScreenTransition"]
